# manim-cranim

./: .gitignore  Containerfile  LICENSE  README.md  _config.yml  pyproject.toml
docs/:  Showcase.md  BendyArrow.md  Block.md  BoxLen.md  BufferToText.md  ByteBox.md  CBCBlock.md  CodeRewrite.md  Cycle.md  ECBBlock.md  ECBBlocks.md  FuncBox.md  PaddingBlock.md  Slide.md  TextToBuffer.md  _config.yml  index.html  index.md
examples/:  Showcase.md  BendyArrow.md  Block.md  BoxLen.md  BufferToText.md  ByteBox.md  CBCBlock.md  CodeRewrite.md  Cycle.md  ECBBlock.md  ECBBlocks.md  FuncBox.md  PaddingBlock.md  README.md  Slide.md  TextToBuffer.md  index.md
src/manim_cranim/: __init__.py  boxlen.py  buffers.py  ciphermodes.py  colors.py  cycle.py  funcs.py  highlight.py  named.py  rewrite.py  types.py  util.py  zoom.py
tests/: gallery.py  manim.cfg  test_buffers.py
tests/code/: padding_oracle_1.py  padding_oracle_2.py
